Api tick percentage
